--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 server.port=8070
+server.servlet.context-path=/api/rest_j/v1/datameta
 spring.application.name=datameta
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.url=jdbc:mysql://56server.south.takin.cc:10376/data_meta_db?characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.pre
